# ZPR

./: Dokumentacja.docx  index.html  params.json  skrypt.sh
GreatMemo/: GreatMemo.pro  database.cpp  database.h  main.cpp  main.cpp.autosave  mainwindow.ui
build-GreatMemo-Desktop_Qt_5_7_0_GCC_64bit-Debug/: GreatMemo  Makefile  database  moc_mainwindow.cpp  oj  test.db
eng-pol/: README  eng-pol.css  eng-pol.tei
eng-pol/etc/: notes.txt  (+1 more)
src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  SuperMemo  SuperMemo.cbp  SuperMemoo.cbp  answer  cmake_install.cmake  db_test.db  skrypt.sh  ui_addnewtestwindow.h  ui_mainwindow.h  ui_newtestname.h  ui_secondwindow.h  ui_solvetestwindow.h
src/db/: create_database_script.sql  db_test.db
src/doc/html/: addnewtestwindow_8h_source.html  addnewuserwindow_8h_source.html  annotated.html  class_add_new_test_window-members.html  class_add_new_test_window.html  class_add_new_user_window-members.html  class_add_new_user_window.html  class_concrete_test-members.html  class_concrete_test.html  class_database_exception-members.html  class_database_exception.html  class_db_manager-members.html  class_db_manager.html  class_main_class-members.html  class_main_class.html  class_main_class_exception-members.html  class_main_class_exception.html  class_main_window-members.html  class_main_window.html  class_new_test_name-members.html  class_new_test_name.html  class_old_user_answer-members.html  class_old_user_answer.html  class_question-members.html  class_question.html  class_question_proxy-members.html  class_question_proxy.html  class_question_real-members.html  class_question_real.html  class_scheduler-members.html  class_scheduler.html  class_second_window-members.html  class_second_window.html  class_solve_test_window-members.html  class_solve_test_window.html  class_test-members.html  class_test.html  class_user-members.html  class_user.html  class_warning_message_dialog-members.html  (+48 more)
src/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js  variables_0.js  variables_1.js  (+1 more)
src/doc/latex/: annotated.tex  class_add_new_test_window.eps  class_add_new_test_window.tex  class_add_new_user_window.eps  class_add_new_user_window.tex  class_concrete_test.tex  class_database_exception.eps  class_database_exception.tex  class_db_manager.tex  class_main_class.tex  class_main_class_exception.eps  class_main_class_exception.tex  class_main_window.tex  class_new_test_name.eps  class_new_test_name.tex  class_old_user_answer.tex  class_question.eps  class_question.tex  class_question_proxy.eps  class_question_proxy.tex  class_question_real.eps  class_question_real.tex  class_scheduler.tex  class_second_window.eps  class_second_window.tex  class_solve_test_window.eps  class_solve_test_window.tex  class_test.tex  class_user.tex  class_warning_message_dialog.eps  class_warning_message_dialog.tex  dir_012470ebe5fcdc445e1d23d464dd31dd.tex  dir_01a6bfe25af3e7f896a8bd68134b3073.tex  dir_076af7795fcc1fc652f63254c24ff325.tex  dir_15851b39441d802ba37580165523004a.tex  dir_3389cf0bbea4cd1d6cde2340549148ea.tex  dir_4a92f655640ced571ace418eae4c9ab7.tex  dir_4c73da72fbf7f7658c4ff29c40700a03.tex  dir_4d32ddab2635cbb1dc68153cb8e03d00.tex  dir_8b24fbf5731c5f0930c145752a2a08b1.tex  (+12 more)
src/include/: addnewtestwindow.h  answersdone.h  concretetest.h  mainclass.h  mainwindow.h  newtestcreator.h  question.h  questionproxy.h  questionreal.h  secondwindow.h  solvetestwindow.h  test.h  user.h
src/include/GUI/: addnewtestwindow.h  addnewuserwindow.h  edituserwindow.h  mainwindow.h  moc_addnewtestwindow.cpp  moc_addnewtestwindow.cpp_parameters  moc_mainwindow.cpp_parameters  moc_newtestname.cpp  moc_newtestname.cpp_parameters  moc_secondwindow.cpp  moc_secondwindow.cpp_parameters  moc_solvetestwindow.cpp  moc_solvetestwindow.cpp_parameters  newtestname.h  secondwindow.h  solvetestwindow.h  warningmessagedialog.h
src/include/logic/: answer.h  answersdone.h  concretetest.h  database.h  database_exception.h  game.h  mainclass.h  mainclass.h.orig  mainclassexception.h  moc_answer.cpp_parameters  moc_answersdone.cpp_parameters  moc_concretetest.cpp_parameters  moc_database.cpp_parameters  moc_database_exception.cpp_parameters  moc_game.cpp_parameters  moc_mainclass.cpp_parameters  moc_newtestcreator.cpp_parameters  moc_olduseranswer.cpp_parameters  moc_question.cpp_parameters  moc_questionproxy.cpp_parameters  moc_questionreal.cpp_parameters  moc_test.cpp_parameters  moc_user.cpp_parameters  newtestcreator.h  olduseranswer.h  question.h  questionproxy.h  questionreal.h  scheduler.h  test.h  user.h
src/src/: addnewtestwindow.cpp  answer.cpp  answersdone.cpp  concretetest.cpp  database.cpp  game.cpp  mainclass.cpp  mainwindow.cpp  newtestcreator.cpp  newtestname.cpp  olduseranswer.cpp  question.cpp  questionproxy.cpp  questionreal.cpp  secondwindow.cpp  solvetestwindow.cpp  test.cpp  user.cpp
src/src/GUI/: addnewtestwindow.cpp  addnewuserwindow.cpp  edituserwindow.cpp  mainwindow.cpp  newtestname.cpp  secondwindow.cpp  solvetestwindow.cpp  warningmessagedialog.cpp  warningmessagedialog.h  warningmessagedialog.ui
src/src/logic/: answer.cpp  answersdone.cpp  concretetest.cpp  database.cpp  database_exception.cpp  game.cpp  main.cpp  mainclass.cpp  mainclass.cpp.orig  mainclassexception.cpp  newtestcreator.cpp  olduseranswer.cpp  question.cpp  questionproxy.cpp  questionreal.cpp  scheduler.cpp  test.cpp  user.cpp
src/src_test/: answer.cpp  tests.cpp
src/ui_include/: addnewtestwindow.ui  addnewuserwindow.ui  edituserwindow.ui  mainwindow.ui  newtestname.ui  secondwindow.ui  solvetestwindow.ui  warningmessagedialog.ui
(+1 files in other folders)
